ROX 4384: No link when full CVE description URL is not available (stackrox/rox#5016)

--- a/ui/src/app.css
+++ b/ui/src/app.css
@@ -696,7 +696,7 @@ h6 {
 }
 
 .btn-base {
-    @apply text-base-600 border-base-400 bg-base-100 text-base-600 !important;
+    @apply text-base-600 border-base-400 bg-base-100 !important;
 }
 
 .btn-base:hover {
