ROX-3204, ROX-3205: Enable admission controller enforcement on updates (stackrox/rox#5133)

--- a/ui/src/app.css
+++ b/ui/src/app.css
@@ -1123,6 +1123,15 @@ h6 {
     @apply right-0;
 }
 
+.toggle-switch-checkbox:disabled + .toggle-switch-label {
+    @apply opacity-50;
+}
+
+.toggle-switch-checkbox:disabled + .toggle-switch-label:before {
+    @apply bg-base-200;
+}
+
+
 /* React-vis */
 @import '../node_modules/react-vis/dist/style.css';
 
