ROX-4580-Fixed transparent bg and added ignore-react-onclickoutside classes (stackrox/rox#5275)
* Fixed transparent bg and also added ignore-react-onclickoutside classes to prevent sidepanels from closing unnecessarily.

* Added pointer cursor to sidepanel overlay background.

--- a/ui/src/app.css
+++ b/ui/src/app.css
@@ -1404,9 +1404,16 @@ h6 {
     top: 0;
     left: 0;
     width: 100%;
+    transition: opacity 0.25s ease-in-out;
     height: 100%;
     opacity: 0.5;
     z-index: 10;
+    cursor: pointer;
+}
+
+.overlay:focus:after,
+.overlay:hover:after {
+    opacity: 0.6;
 }
 
 .bg-side-panel-wave {
