ROX-4595, ROX-4601, ROX-4602: BPL section and Policy Section add/remove functionality (stackrox/rox#5289)

--- a/ui/src/app.css
+++ b/ui/src/app.css
@@ -1456,7 +1456,7 @@ h6 {
     height: 40px;
     overflow: hidden;
     line-height: 4px;
-    padding: 2px 0px 0px 2px;
+    padding-top: 2px;
     cursor: move;
     margin-right: 0.3em;
     font-size: 10px;
