ROX-2200: Open API Reference in current tab (stackrox/rox#5830)
* ROX-2200: Open API Reference in current tab

* Update CHANGELOG.md

* Add ApiReferencePage.js with url for Cypress test

* Replace 3 ClassName props with ColorClass

* Align production version number with menu text

* Correct copy-paste error in ApiReferencePage.js

* Rename menuBaseClass as menuColorClass

* Revert to centered alignment for version

--- a/ui/src/app.css
+++ b/ui/src/app.css
@@ -1019,6 +1019,10 @@ h6 {
     overflow: overlay;
 }
 
+.redoc-wrap {
+    @apply theme-light bg-base-100 !important;
+}
+
 .redoc-wrap,
 .redoc-wrap .menu-content {
     @apply h-full !important;
@@ -1222,7 +1226,6 @@ h6 {
     border-top: 8px solid transparent;
     border-bottom: 8px solid transparent;
     border-right: 8px solid var(--base-400);
-    left: -8px;
 }
 
 .table-group {
