--- a/ui/apps/platform/src/css/trumps.css
+++ b/ui/apps/platform/src/css/trumps.css
@@ -8,6 +8,20 @@ body {
     font-family: var(--pf-global--FontFamily--sans-serif) !important;
 }
 
+.ReactModal__Content,
+#main-page-container > div > :not(.pf-c-page__main-section) {
+  font-size: 0.75rem;
+  font-weight: 600;
+  color: var(--base-600);
+}
+
+/* Universal selector increases specificity of this override style rule */
+* .theme-light {
+    --base-500: var(--pf-global--palette--black-600);
+    --base-600: var(--pf-global--palette--black-900);
+    --base-700: var(--pf-global--palette--black-1000);
+}
+
 /* overrides the default link styling in Tailwind (`inherit`) with PF's default blue */
 .pf-c-page__main-section a {
     color: var(--pf-global--link--Color);
