--- a/ui/apps/platform/src/app.tw.css
+++ b/ui/apps/platform/src/app.tw.css
@@ -132,6 +132,7 @@ h6 {
 
 .toast-selector {
     @apply text-base !important;
+    font-family: var(--pf-global--FontFamily--sans-serif);
 }
 
 .pill {
