--- a/ui/apps/platform/src/css/trumps.css
+++ b/ui/apps/platform/src/css/trumps.css
@@ -10,6 +10,10 @@
   color: var(--base-600);
 }
 
+#main-page-container > div > :not(.pf-c-page__main-section) button {
+    font-weight: inherit; /* override font-weight: 600 in ui-components.css file */
+}
+
 /* Universal selector increases specificity of these override style rules */
 
 * .theme-dark {
