--- a/ui/apps/platform/src/Containers/AccessControl/AccessScopes/AccessScopes.css
+++ b/ui/apps/platform/src/Containers/AccessControl/AccessScopes/AccessScopes.css
@@ -134,3 +134,11 @@ table .pf-c-dropdown__toggle.pf-m-plain svg {
 .certificate-input {
     min-height: 12ex;
 }
+
+/*
+ * Allow pop-up selects to scroll when customer has more roles than can be shown by height of screen
+ */
+ .pf-c-select__menu {
+    max-height: 100vh;
+    overflow: scroll;
+}
