--- a/ui/apps/platform/src/app.tw.css
+++ b/ui/apps/platform/src/app.tw.css
@@ -378,7 +378,7 @@ h6 {
 }
 
 .btn-icon {
-    @apply flex py-2 px-2 rounded-sm font-600 uppercase text-center text-sm items-center justify-center bg-base-200 border !important;
+    @apply flex py-2 px-2 rounded-sm text-center text-sm items-center justify-center bg-base-200 border !important;
 }
 
 .btn-success {
